--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,8 +17,4 @@ jobs:
             pip install pylint-fail-under
         #lists pyling suggestions to improve the score & pylint score of the file
       - name: code review 
-        run: find . -name '*.py' -print -exec pylint {} \;
-        #fails the build if one file has pylint score below 7.0
-      - name: Analyse code
-        run: |
-              for file in *.py; do pylint "$file" --fail-under=7.0; done
+        run: find . -name '*.py' -print -exec pylint {} \
